Finished implementing the producer.